# teamcity-cli

./: .gitignore  .golangci.yml  .goreleaser.yaml  .teamcity-release.yml  .teamcity.yml  404.html  AGENTS.md  ANALYSIS_INDEX.md  COMPARISON.md  CONTRIBUTING.md  FEATURE_GAP_ANALYSIS.md  HelpTOC.json  Map.jhm  README.md  README_ANALYSIS.md  RECOMMENDATIONS.md  config.json  docker-compose.yml  go.mod  go.sum  index.html  install.cmd  install.ps1  install.sh  justfile  skills.go  skills_list.go  skills_list_test.go  teamcity-cli-ai-agent-integration.html  teamcity-cli-aliases.html  teamcity-cli-authentication.html  teamcity-cli-commands.html  teamcity-cli-configuration.html  teamcity-cli-get-started.html  teamcity-cli-glossary.html  teamcity-cli-managing-agent-pools.html  teamcity-cli-managing-agents.html  teamcity-cli-managing-build-queue.html  teamcity-cli-managing-jobs.html  teamcity-cli-managing-projects.html  (+5 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.teamcity/: pom.xml  settings.kts
acceptance/: README.md  acceptance_test.go
api/: agents.go  agents_test.go  api_test.go  builds.go  builds_artifacts.go  builds_artifacts_test.go  builds_metadata.go  builds_metadata_test.go  builds_queue.go  builds_queue_test.go  builds_test.go  client.go  client_test.go  jobs.go  (+63 more)
evals/: .env  .env.example  README.md  checks.py  conftest.py  pipeline.yml  pyproject.toml  tasks.json
evals/scaffold/: claude.py  graders.py  runner.py  sentry_log.py  tasks.py
evals/scripts/: compare.py
evals/tests/: test_checks.py  test_tasks.py
(+575 files in other folders)
