[project]
name = "teamcity-cli-evals"
version = "0.1.0"
description = "Skill evaluation pipeline for the TeamCity CLI agent skill"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "langsmith>=0.3",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-repeat>=0.9",
    "pytest-timeout>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
